format: initial setup and code formatting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
       "strictNullChecks": true,
       "esModuleInterop": true,
       "rootDir": "src",
-    }
+    },
+    "files": ["./global.d.ts"]
 }
