--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -3,7 +3,7 @@ name: Test Suite
 on:
     pull_request:
       # The branches below must be a subset of the branches above
-      branches: [main]
+      branches: [main, dev]
 
 jobs:
   test-and-build:
@@ -28,9 +28,6 @@ jobs:
 
       - name: Linting
         run: npm run lint
-
-      - name: Run tests
-        run: npm run test
 
       - name: Build
         run: npm run build
