feat: Add notification inbox UI
* format: initial setup and code formatting

* fix: updated error types

* fix: updated notification data type

* refactor: Add JSDoc comments and type definitions

* Refactor: Update error type definitions

* refactor: Refactor code according to PR feedback

* refactor: Fix PR comments and update type declaration

* feat: Implement reducer for global state management

* refactor: Add error handling and fix PR comments

* fix: update delete button and core package

* fix: Add untilDate argument to core api call

* refactor: update error handling for core api calls

* refactor: fix PR comments

---------

Co-authored-by: Thushar Sreenivas <thushar@keyvalue.systems>

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "prepare": "husky",
     "lint": "eslint src",
-    "build": "bob build"
+    "build": "bob build",
+    "test-build": "npm run build && npm pack && mv siren-react-native-inbox-1.0.0.tgz ../example/siren-sdk03.tgz && cd ../example && npm install"
   },
   "devDependencies": {
     "@types/react": "^18.2.57",
@@ -56,5 +57,8 @@
     "./dist",
     "license",
     "readme"
-  ]
+  ],
+  "dependencies": {
+    "test_notification": "1.0.3"
+  }
 }
