--- a/package.json
+++ b/package.json
@@ -31,14 +31,25 @@
     "test-build": "npm run build && npm pack && mv siren-react-native-inbox-1.0.0.tgz ../example/siren-sdk03.tgz && cd ../example && npm install"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.57",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.56.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "^18.2.0",
     "react-native": "^0.73.4",
     "react-native-builder-bob": "^0.23.2",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
