--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,7 @@
       "strictNullChecks": true,
       "esModuleInterop": true,
       "rootDir": "src",
-    }
+    },
+    "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
+
 }
