--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
-    "@siren/react-native-inbox": "siren-sdk10.tgz",
+    "@siren/react-native-inbox": "siren-sdk12.tgz",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^4.9.0",
