--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepare": "husky",
     "lint": "eslint src",
     "build": "bob build",
-    "test-build": "npm run build && npm pack && mv siren-react-native-inbox-1.0.0.tgz ../example/siren-sdk03.tgz && cd ../example && npm install"
+    "test-build": "npm run build && npm pack && mv siren-react-native-inbox-1.0.0.tgz example/siren-sdk01.tgz && cd example && npm install"
   },
   "devDependencies": {
     "@types/react": "^18.2.57",
