fix: Build issue fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,9 @@
       "moduleResolution": "node",
       "strictNullChecks": true,
       "esModuleInterop": true,
-    }
+      "rootDir": "src",
+    },
+    "exclude": [
+      "example"
+    ]
 }
