feat: Add example project (#6)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,8 @@
       "strictNullChecks": true,
       "esModuleInterop": true,
       "rootDir": "src",
-    }
+    },
+    "exclude": [
+      "example"
+    ]
 }
