--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
       "esModuleInterop": true,
       "rootDir": "src",
     },
-    "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js", "example"]
+    "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js", "example", "tests"]
 }
