--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,5 @@
       "esModuleInterop": true,
       "rootDir": "src",
     },
-    "exclude": [
-      "example"
-    ]
+    "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js", "example", "tests"]
 }
