--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,8 @@
     "@siren/react-native-inbox": "siren-sdk01.tgz",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-modal": "^13.0.1",
+    "react-native-network-logger": "^1.15.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
   },
