--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-native": "^0.73.4"
+    "react": ">=16.8.0",
+    "react-native": ">=0.59.0"
   },
   "react-native-builder-bob": {
     "source": "src",
