--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.12",
+    "@types/pubsub-js": "^1.8.6",
     "@types/react": "^18.2.57",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
@@ -55,8 +56,8 @@
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-native": "^0.73.4"
+    "react": ">=16.8.0",
+    "react-native": ">=0.59.0"
   },
   "react-native-builder-bob": {
     "source": "src",
@@ -72,6 +73,7 @@
     "readme"
   ],
   "dependencies": {
-    "test_notification": "^1.0.4"
+    "pubsub-js": "^1.9.4",
+    "test_notification": "^1.0.5"
   }
 }
