--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "prepare": "husky",
     "lint": "eslint src",
+    "lint:fix": "npm run lint -- --fix",
     "build": "bob build",
     "test-build": "npm run build && npm pack && mv siren-react-native-inbox-1.0.0.tgz example/siren-sdk01.tgz && cd example && npm install",
     "test": "npx jest",
@@ -41,14 +42,17 @@
     "@types/jest": "^29.5.12",
     "@types/pubsub-js": "^1.8.6",
     "@types/react": "^18.2.57",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "react": "^18.2.0",
     "react-native": "^0.73.4",
     "react-native-builder-bob": "^0.23.2",
