--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@siren/react-native-inbox",
   "version": "1.0.0",
-  "description": "React Native SDK for in-app notification inbox",
+  "description": "React Native SDK tailored for creating and managing in-app notification inboxes.",
   "main": "dist/module/index",
   "types": "dist/typescript/index.d.ts",
   "react-native": "dist/module/index",
@@ -78,6 +78,6 @@
   ],
   "dependencies": {
     "pubsub-js": "^1.9.4",
-    "test_notification": "^1.0.5"
+    "test_notification": "^1.0.7"
   }
 }
