--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@siren/react-native-inbox",
+  "name": "@sirenapp/react-native-inbox",
   "version": "1.0.0",
   "description": "React Native SDK tailored for creating and managing in-app notification inboxes.",
   "main": "dist/module/index",
@@ -78,6 +78,6 @@
   ],
   "dependencies": {
     "pubsub-js": "^1.9.4",
-    "test_notification": "^1.0.20"
+    "@sirenapp/js-sdk": "^1.0.0"
   }
 }
