refactor: add configuration for remove sourceMap files from module folder in build

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "source": "src",
     "output": "dist",
     "targets": [
-      "module",
+      ["module", { "sourceMaps": false }],
       "typescript"
     ]
   },
